Fix the scrollbar position

--- a/src/components/Layout/DesktopGrid.module.css
+++ b/src/components/Layout/DesktopGrid.module.css
@@ -82,6 +82,9 @@
   overflow-y: auto;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @keyframes background {
